# CoreTerra

./: .gitignore  2-data_schema.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  mcp.json  prototype.html  protoype.html  run.sh
.github/workflows/: ci.yml  claude-code-review.yml
backend/: .gitignore  pyproject.toml
backend/scripts/: load_env.py
backend/src/: auth.py  capture.py  clarify.py  config.py  database.py  main.py  organize.py  review.py  schemas.py  storage.py  users.py
backend/tests/: conftest.py  schemas.py  test_capture.py  test_clarify.py  test_core_flow.py  test_engage.py  test_history.py  test_main.py  test_organize.py  test_review.py  test_user.py
backend/tests/fixtures/: test_subtask.md  test_task.md  test_user.md
cli/: main.py  pyproject.toml
cli/cli/: main.py
cli/cli/core/: config.py
cli/tests/: test_auth.py  test_capture.py  test_clarify.py  test_engage.py  test_organize.py  test_review.py
config/: enums.json
docs/: 0-project _overview.md  1-requirement.md  2-data_schema.md  3-api_contract.md  4-ui_ux_spec.md  5-dev_guide.md  6-test_strategy.md  cli_commands.md  data-flow.md  index.md
docs/plan/: 01-setup.md  02-auth.md  03-list-view.md  04-detail-view.md  05-creation.md  06-user-settings.md  07-ci-cd.md  08-git-history-api.md  index.md
frontend/: .gitignore  .npmrc  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  vite-env.d.ts
frontend/src/config/: enums.ts
frontend/src/context/: TaskContext.tsx  UserContext.tsx
frontend/src/hooks/: useTaskOperations.ts
(+32 files in other folders)
