[project]
name = "coreterra-cli"
version = "0.1.0"
description = "CLI for CoreTerra"
authors = [{name = "CoreTerra Team", email = "team@coreterra.io"}]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0"
]

[project.scripts]
core = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "requests-mock>=1.11.0"
]
